[package]
name = "webworker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nimiq-bls = { git = "https://github.com/nimiq/core-rs-albatross" }
nimiq-utils = { git = "https://github.com/nimiq/core-rs-albatross", features = ["key-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
rayon = "1.8"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }

ark-serialize = "0.4"

getrandom = { version = "0.2", features = ["js"] }

console_error_panic_hook = { version = "0.1.6", optional = true }
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  'console',
  'Document',
  'HtmlElement',
  'HtmlInputElement',
  'MessageEvent',
  'Window',
  'Worker',
  'WorkerOptions',
  'WorkerType'
]
version = "0.3.72"
