[package]
name = "webworker-demo"
version = "0.1.0"
edition = "2021"
publish = false

description.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
rand = "0.8"
send_wrapper = "0.6"
tokio = { version = "1.4", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.45"
webworker = { path = ".." }
webworker-proc-macro = { path = "../proc-macro" }

[dependencies.web-sys]
features = [
    "console",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "MessageEvent",
    "Window",
]
version = "0.3.72"
